# bayesian_item_response_theory

./: pyproject.toml
notebooks/: jis.ipynb
