[tool.poetry]
name = "bayesian-item-response-theory"
version = "0.1.0"
description = ""
authors = ["Tsuyoshi <tsuyoshi.ueno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.4.9"
numpyro = "^0.19.0"
pandas = "^2.3.2"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"
japanize-matplotlib = "^1.1.3"
matplotlib-fontja = "^1.1.0"
matplotlib = "^3.10.6"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
